--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,5 @@
 html{
     z-index: 1;
-    width: 100%;
-    height: 100%;
     background-color: #606060
 }
 canvas{
@@ -11,24 +9,31 @@ canvas{
 }
 
 #aboutMe p{
+    padding: 50px;
     color: azure;
-    padding: 30px;
     border-color: azure;
     border-style: solid;
     border-width: 5px;
+    border-spacing: 20px;
     font-size: 50px;
 }
-#name {
-    width: 100%;
-    height: 100%;
+#face {
+    width: 400px;
+    height: 400px;
+    background: #000000
+}
 
+img {
+    position: relative;
+    
+    right: 0px;
+    left: 150px;
 }
 
 #particles-js{
     position: absolute;
     z-index: -1;
-    width: 100%;
+    width: auto;
     height: 100%;
-    background-position: 50% 50%;
     background-repeat: no-repeat;
   }
