--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,8 @@
 img {
     width: 100%;
     border-radius: 75px;
+    box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.4)
 }
-
-
 
 .columns {
     display: flex;
@@ -36,6 +35,12 @@ img {
 
 .accent {
     color: #00A3FF;
+    text-shadow:
+   -1px -1px 0 #383838,  
+    1px -1px 0 #383838,
+    -1px 1px 0 #383838,
+     1px 1px 0 #383838;
+
 }
 
 #particles {
@@ -56,5 +61,7 @@ img {
         width: 100%;
         padding: 0;
     }
-    
+
+
+
 }
