--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,5 @@
 html, body {
     height: 100%;
-    overflow-x: hidden;
 }
 
 main {
@@ -47,6 +46,7 @@ li {
 }
 
 .button {
+    display:inline-block;
     position: relative;
     text-decoration: none;
     color: white;
@@ -86,6 +86,11 @@ li {
 }
 
 @media (max-width: 620px) {
+    .button {
+        display: block;
+        margin:0.4em auto;
+    }
+
     header {
         flex-direction: column;
         width: 100%;
