--- a/css/index.css
+++ b/css/index.css
@@ -59,6 +59,7 @@ img {
     right: 0;
     left: 0;
     overflow: hidden;
+    overflow-x: hidden;
     position: absolute;
     width: 100%;
     height: 100%;
